--- a/next12-test1/styles/globals.css
+++ b/next12-test1/styles/globals.css
@@ -1,26 +1,80 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,900&display=swap");
+
+* {
+  font-family: "Roboto", sans-serif;
+}
+:root {
+  --content-width: 1000px;
+  --breakpoint: 799px;
+  --nav-height: 70px;
+  --nav-background: #262626;
+  --nav-font-color: #ffffff;
+  --link-hover-color: #2581dc;
 }
 
-a {
-  color: inherit;
+.navigation {
+  height: var(--nav-height);
+  background: var(--nav-background);
+}
+
+.nav-container {
+  max-width: var(--content-width);
+  margin: 0 auto;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  float: left;
+  position: relative;
+}
+
+nav li a,
+nav li a:visited {
+  display: block;
+  padding: 0 20px;
+  line-height: var(--nav-height);
+  background: var(--nav-background);
+  color: var(--nav-font-color);
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+nav li a:hover,
+footer a:hover {
+  background: var(--link-hover-color);
+  color: var(--nav-font-color);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+nav li ul li {
+  min-width: 190px;
+}
+
+nav li ul li a {
+  padding: 15px;
+  line-height: 20px;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: #ffffff;
+  text-align: center;
+  margin: "20px";
+}
+
+footer a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: #ffffff;
 }
